--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,17 +2,11 @@
     "configurations": [
         {
             "type": "java",
-            "name": "Producer",
+            "name": "Main",
             "request": "launch",
-            "mainClass": "br.univille.Publisher",
-            "projectName": "eventos"
-        },
-        {
-            "type": "java",
-            "name": "Consumer",
-            "request": "launch",
-            "mainClass": "br.univille.Publisher",
-            "projectName": "eventos"
+            "mainClass": "br.univille.Main",
+            "projectName": "pipeline",
+            "envFile": "${workspaceFolder}/.env"
         },
         {
             "type": "java",
