--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,20 @@
             "name": "Main",
             "request": "launch",
             "mainClass": "br.univille.Main",
+            "projectName": "designpatterns"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "br.univille.Main",
+            "projectName": "eventos"
+        },
+        {
+            "type": "java",
+            "name": "Main",
+            "request": "launch",
+            "mainClass": "br.univille.Main",
             "projectName": "pipeline",
             "envFile": "${workspaceFolder}/.env"
         },
